tester_ft/log/compile_error_vec_23.txt
-VECTOR COPY RANGE CONSTRUCTOR TEST-

./tmp/outfile_vec_23.cpp:34:19: error: no matching constructor for initialization of 'ft::vector<int>'
                ft::vector<int> v2_r(v2.begin(), v2.end());
                                ^    ~~~~~~~~~~~~~~~~~~~~
/Users/anastasiadementeva/Desktop/projects/ft_containers/vector.hpp:37:13: note: candidate constructor not viable: no known conversion from 'ft::vector<int>::iterator' (aka 'iterator<int>') to 'ft::vector<int>::size_type' (aka 'unsigned long') for 1st argument
                        explicit vector (size_type n, const value_type& val = value_type()): __begin_(nullptr), __end_(nullptr), _end_cap_(nullptr), _size(0), _alloc(allocator_type())
                                 ^
/Users/anastasiadementeva/Desktop/projects/ft_containers/vector.hpp:54:4: note: candidate constructor not viable: requires single argument 'x', but 2 arguments were provided
                        vector (const vector& x)
                        ^
/Users/anastasiadementeva/Desktop/projects/ft_containers/vector.hpp:35:13: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
                        explicit vector(): __begin_(nullptr), __end_(nullptr), _end_cap_(nullptr), _size(0), _alloc(allocator_type()) {}
                                 ^
./tmp/outfile_vec_23.cpp:72:19: error: no matching constructor for initialization of 'ft::vector<int>'
                ft::vector<int> v2_r(v2.begin(), v2.end());
                                ^    ~~~~~~~~~~~~~~~~~~~~
/Users/anastasiadementeva/Desktop/projects/ft_containers/vector.hpp:37:13: note: candidate constructor not viable: no known conversion from 'ft::vector<int>::iterator' (aka 'iterator<int>') to 'ft::vector<int>::size_type' (aka 'unsigned long') for 1st argument
                        explicit vector (size_type n, const value_type& val = value_type()): __begin_(nullptr), __end_(nullptr), _end_cap_(nullptr), _size(0), _alloc(allocator_type())
                                 ^
/Users/anastasiadementeva/Desktop/projects/ft_containers/vector.hpp:54:4: note: candidate constructor not viable: requires single argument 'x', but 2 arguments were provided
                        vector (const vector& x)
                        ^
/Users/anastasiadementeva/Desktop/projects/ft_containers/vector.hpp:35:13: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
                        explicit vector(): __begin_(nullptr), __end_(nullptr), _end_cap_(nullptr), _size(0), _alloc(allocator_type()) {}
                                 ^
2 errors generated.
